forth/test/fail/test_cond_arity_no_else.af
use' ../../lang.af

fun: .test_cond_arity_no_else_fail { -- out }
  false .then 10 elif true .then 20 end
end
